--- a/client/src/components/SignUp/SignUp.scss
+++ b/client/src/components/SignUp/SignUp.scss
@@ -31,6 +31,7 @@
             background-color: #5CDB95;
             border: 0;
             border-radius: 1em;
+            cursor: pointer;
         }
     }
 
