--- a/client/src/components/Profile/SideNav/SideNav.scss
+++ b/client/src/components/Profile/SideNav/SideNav.scss
@@ -1,15 +1,15 @@
 .side-nav {
 
     width: 20vw;
-    height: 100vh;
+    height: 100%;
     border-right: 1px solid rebeccapurple;
     display: flex;
     flex-direction: column;
-    padding-top: 5em;
+    // padding-top: 5em;
 
     &-profile-img {
-        width: 10em;
-        height: 10em;
+        width: 7em;
+        height: 7em;
         border-radius: 50%;
         align-self: center;
         border: 1px solid rebeccapurple;
@@ -24,7 +24,7 @@
     &-links {
         display: flex;
         flex-direction: column;
-        margin: 3em 2em;
+        margin: 1em 2em;
         font-size: 1.3em;
 
         &-link {
