--- a/client/src/components/Modals/SeriesDetails/SeriesDetails.scss
+++ b/client/src/components/Modals/SeriesDetails/SeriesDetails.scss
@@ -1,4 +1,4 @@
-.movie-details {
+.series-details {
     display: flex;
 
     img {
@@ -34,5 +34,4 @@
             gap: .5em;
         }
     }
-
 }
