--- a/client/src/components/Profile/ProfileMovies/ProfileMovies.scss
+++ b/client/src/components/Profile/ProfileMovies/ProfileMovies.scss
@@ -1,4 +1,4 @@
-.profile-movies {
+.profile-movies-page {
 
     &-title {
         text-align: center;
@@ -6,22 +6,11 @@
         margin: 1em 0;
     }
 
-    &-small-nav {
-        display: flex;
-        margin: 0 5em;
-
-        .small-nav-link {
-            margin-right: 1em;
-            padding: .5em;
-            border: 1px solid rebeccapurple;
-            color: rebeccapurple;
-            border-radius: 2em;
-            cursor: pointer;
-        }
-
-        .active-link {
-            color: white;
-            background-color: rebeccapurple;
-        }
+    &-movies {
+        padding: 2em;
+        display: grid;
+        grid-template-columns: auto auto auto;      
+        gap: 1em;  
     }
+    
 }
