--- a/client/src/components/SignUp/SignUp.scss
+++ b/client/src/components/SignUp/SignUp.scss
@@ -20,13 +20,21 @@
         flex-direction: column;
         margin: 1em 0;
 
+        label {
+            margin-top: .5em;
+        }
+
         input {
-            margin-bottom: 1em;
             padding: .2em;
             font-size: 20px;
         }
 
+        input:focus {
+            border: none;
+        }
+
         .submit {
+            margin-top: 1em;
             padding: .5em 0;
             background-color: rebeccapurple;
             color: white;
@@ -41,6 +49,11 @@
             color: rebeccapurple;
             text-decoration: underline;
         }
+    }
+
+    .error-message {
+        color: red;
+        font-size: .5em;
     }
 }
 
